compiler/test-data/parser/contract/errors/empty_contract.frel
module contract.errors.empty_contract

contract Empty { }
